--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+VBcomTaskServerBundle_user:
+    resource: "@VBcomTaskServerBundle/Resources/config/routing/user.yml"
+    prefix:   /user
+
 VBcomTaskServerBundle_task:
     resource: "@VBcomTaskServerBundle/Resources/config/routing/task.yml"
     prefix:   /server/task
